core/overlays/garu-home/hass/k8s.namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hass
  labels:
    namespace: hass
---
