core/overlays/garu-home/hass/k8s.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass
  namespace: hass
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: "iot.garu.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garu-io-iot
                port:
                  number: 8123
  tls:
    - hosts:
        - iot.garu.io
      secretName: garu-io-iot-cert
---
